--- a/src/main/java/gui/sample.fxml
+++ b/src/main/java/gui/sample.fxml
@@ -31,189 +31,9 @@
         </menus>
       </MenuBar>
       <Button id="btnCancel" layoutX="700.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCancelClickMethod" prefHeight="30.0" prefWidth="90.0" text="Cancel" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-      <Button id="refresh" fx:id="refresh" layoutX="600.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onTestAddData" prefHeight="30.0" prefWidth="90.0" text="Upload" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="110.0" />
+      <Button id="refresh" fx:id="refresh" layoutX="600.0" layoutY="560.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRefreshClickMethod" prefHeight="30.0" prefWidth="90.0" text="Upload" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="110.0" />
       <Separator layoutY="547.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="3.0" prefWidth="800.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="0.0" />
-      <TabPane fx:id="tabPane" layoutY="20.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
-        <tabs>
-          <Tab text="Oracle-PostgreSQL">
-               <content>
-                  <ScrollPane prefViewportHeight="490.0" prefViewportWidth="800.0">
-                     <content>
-                        <GridPane fx:id="gridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity">
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="30.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" minHeight="25.0" percentHeight="0.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" minHeight="25.0" percentHeight="0.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" minHeight="25.0" percentHeight="0.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" minHeight="25.0" percentHeight="0.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="0.0" prefHeight="25.0" valignment="CENTER" />
-                              <RowConstraints maxHeight="1.7976931348623157E308" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints fillHeight="false" maxHeight="25.0" minHeight="25.0" percentHeight="-0.0" prefHeight="25.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints maxHeight="1.7976931348623157E308" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="25.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints maxHeight="1.7976931348623157E308" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" valignment="TOP" vgrow="ALWAYS" />
-                              <RowConstraints vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <TableView id="category" fx:id="convGenStatTable" minHeight="-Infinity" prefHeight="60.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="11" GridPane.vgrow="ALWAYS">
-                                 <columns>
-                                    <TableColumn fx:id="categoryGenStat" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" resizable="false" text="Categoories" />
-                                 </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="General statistic" GridPane.rowIndex="10">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Failed objects" GridPane.rowIndex="12">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView fx:id="convFailedTable" minHeight="-Infinity" prefHeight="60.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="13" GridPane.vgrow="ALWAYS">
-                                <columns>
-                                  <TableColumn fx:id="categoryFailConv" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Categories" />
-                                </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Passed objects" GridPane.rowIndex="14">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView fx:id="convPassTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="15">
-                                <columns>
-                                  <TableColumn fx:id="categoryPassConv" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" text="Categories" />
-                                </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Apply statistic">
-                                 <font>
-                                    <Font name="Arial Bold" size="14.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="General statistic" GridPane.rowIndex="3">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Failed objects" GridPane.rowIndex="5">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Passed objects" GridPane.rowIndex="7">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Conversion statistic" GridPane.rowIndex="9">
-                                 <font>
-                                    <Font name="Arial Bold" size="14.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView id="category" fx:id="applyGenStatTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="4">
-                                 <columns>
-                                    <TableColumn fx:id="categoryGenStat1" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" resizable="false" text="Categoories" />
-                                 </columns>
-                              </TableView>
-                              <TableView fx:id="applyFailedTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="6">
-                                 <columns>
-                                    <TableColumn fx:id="categoryFailConv1" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Categories" />
-                                 </columns>
-                              </TableView>
-                              <TableView fx:id="applyPassTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="8">
-                                 <columns>
-                                    <TableColumn fx:id="categoryPassConv1" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" text="Categories" />
-                                 </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Statistic by source" GridPane.rowIndex="1">
-                                 <font>
-                                    <Font name="Arial" size="12.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView id="category" fx:id="sorceStatistic" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="2">
-                                 <columns>
-                                    <TableColumn fx:id="categoryGenStat11" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" resizable="false" text="Categoories" />
-                                 </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Error statistic" GridPane.rowIndex="16">
-                                 <font>
-                                    <Font name="Arial Bold" size="14.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView fx:id="errorTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="17">
-                                 <columns>
-                                    <TableColumn fx:id="categoryFailConv11" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Categories" />
-                                 </columns>
-                              </TableView>
-                              <Label maxHeight="25.0" maxWidth="25.0" minWidth="-Infinity" prefHeight="25.0" text="Action Items statistic" GridPane.rowIndex="18">
-                                 <font>
-                                    <Font name="Arial Bold" size="14.0" />
-                                 </font>
-                                 <padding>
-                                    <Insets left="12.0" right="12.0" />
-                                 </padding>
-                              </Label>
-                              <TableView fx:id="actionItemsTable" minHeight="-Infinity" prefHeight="60.0" GridPane.rowIndex="19">
-                                 <columns>
-                                    <TableColumn fx:id="categoryFailConv111" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Categories" />
-                                 </columns>
-                              </TableView>
-                           </children>
-                           <opaqueInsets>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </opaqueInsets>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" />
-                           </padding>
-                        </GridPane>
-                     </content>
-                  </ScrollPane>
-               </content>
-            </Tab>
-        </tabs>
-      </TabPane>
+      <TabPane fx:id="tabPane" layoutY="20.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
       <Button fx:id="addReports" layoutX="507.0" layoutY="906.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddReportsClick" prefHeight="30.0" prefWidth="90.0" text="Add Reports" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="210.0" />
       <Button graphicTextGap="0.0" layoutX="20.0" layoutY="909.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddTabClick" prefHeight="30.0" prefWidth="30.0" text="+" textFill="#001eff" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0">
          <font>
